@startuml RectangleSquare

class Rectangle {
 + width: number = 0
 + height: number = 0
 + setWidth(width: number): void
 + setHeight(height: number): void
 + getArea(): number
}

class Square {
 + setWidth(width: number): void
 + setHeight(height: number): void
}

note right of Rectangle::getArea
 return width * height
end note

note right of Square::setWidth
 super.setWidth(width)
 super.setHeight(width)
end note

note right of Square::setHeight
 super.setWidth(height)
 super.setHeight(height)
end note

class Client {
 + {static} f(r: Rectangle, width: number, height: number): number
}

Square --|> Rectangle : extends
Client --> Rectangle : uses

@enduml